2020-06-07  Benjamin Yang  <be11ng@protonmail.com>

	* nethack-api.el (nhapi-raw-print): Don't delete-other-windows.
	(nhapi-restore-window-configuration): Likewise.
	* nethack.el (nh-sentinel): Pop-to-buffer raw-print-buffer on
	exit.
	(nethack-kill-buffers): kill-buffer-and-window in a dolist for
	nh-status-buffer and nh-message-buffer, not repeated kill-buffer.

	* nethack-api.el (nhapi-exit-nhwindows): Put redundant comment
	into empty docstring.
	* nethack.el (nethack-kill-buffers): Capitalize docstring.

2020-06-06  Benjamin Yang  <be11ng@protonmail.com>

	* nethack-api.el (nhapi-restore-window-configuration): Remove
	if-statement around the failsafe nhapi-create-map-window and
	nhapi-create-inventory-window.
	(nhapi-create-map-window): Put buffer-live-p around nh-map-buffer.
	(nhapi-create-inventory-window): Likewise, but around an assq of
	nh-menu-buffer-table.

2020-06-05  Benjamin Yang  <be11ng@protonmail.com>

	* Makefile: Add nethack-compat.el to rule all.
	* nethack-compat.el (cl): Change cl to cl-lib.
	* nethack-compat.el: Change all instances of case to cl-case.
	* nethack-api.el: Likewise.
	* nh-bot.el: Likewise, and change first to cl-first and find to
	cl-find.

2020-06-04  Benjamin Yang  <be11ng@protonmail.com>

	* nethack-api.el: Add file local variable to enable lexical scope.
	* nethack-cmd.el: Likewise.
	* nethack-compat.el: Likewise.
	* nethack-example.el: Likewise.
	* nethack-keys.el: Likewise.
	* nethack-nhlaunch.el: Likewise.
	* nethack.el: Likewise.
	* nh-bot.el: Likewise.

2020-05-29  Evan Izaksonas-Smith  <izak0002@dev.null>

	* nethack-keys.el (nh-mode-map): Added binding for riding and
	rubbing.

2020-05-28  Benjamin Yang  <be11ng@protonmail.com>

	* nethack-api.el (nhapi-restore-window-configuration): If
	nh-map-buffer or nh-menu-buffer-table are not defined, create the
	relevant windows.
	(nhapi-create-map-window): If already there, don't make another
	one.
	(nhapi-create-inventory-window): Likewise.
