@@ -1,5 +1,3 @@
 There aren't too many.  But then it hasn't been tested too much :)
 
-* When inside nethack, giving motions double-digit numeric prefixes crashes
-
 See also ./TODO
