@@ -1,3 +1,8 @@
+2020-06-08  Benjamin Yang  <be11ng@protonmail.com>
+
+	* enh-366.patch/win/lisp/winlisp.c (attr_to_string): Strip off
+	control flags masked onto the display attributes.
+
 2020-06-07  Benjamin Yang  <be11ng@protonmail.com>
 
 	* nethack-api.el (nhapi-raw-print): Don't delete-other-windows.
